# tariff-comparison

./: CMakeLists.txt  README  README.md  main.cpp  tariff-comparison
include/: Product.h  ProductA.h  ProductB.h  Products.h
src/: Product.cpp  ProductA.cpp  ProductB.cpp  Products.cpp
